# tg-research-agent

./: .dockerignore  .gitignore  LICENSE  README.md  main.sh  replit.nix
.github/workflows/: cicd.yml
backend/: .env.template  Dockerfile  docker-compose.yml  langgraph.json  pyproject.toml  pytest.ini  run_all_tests.sh
backend/app/: config.py  main.py
backend/app/agents/: base_node.py  base_node_output.py  llm_node.py
backend/app/agents/chat_agent/: chat_agent.py  chat_graph.py  graph.py  state.py
backend/app/agents/chat_agent/nodes/: clarifier_node.py  classifier_node.py  extractor_node.py  finalizer_node.py  funneler_node.py  questioner_node.py  research_node.py
backend/app/agents/research_agent/: graph.py  research_agent.py  research_graph.py  state.py
backend/app/agents/research_agent/nodes/: final_report_node.py  planner_node.py  reporter_node.py  reviewer_node.py  router_node.py  selector_node.py  web_scraper_node.py  web_search_node.py
backend/app/database/: mongodb.py
backend/app/models/: agent.py  chat_history.py  chat_message.py  user.py
backend/app/prompts/: prompts.py
backend/app/routes/: errors.py  webhook.py
backend/app/services/: agent_service.py  chat_history_service.py  user_service.py
backend/app/services/telegram/: router.py  service.py
backend/app/services/telegram/routes/: cancel.py  chat.py  help.py  research.py  start.py  status.py
backend/app/utils/: helper_functions.py
backend/tests/: conftest.py  test_agent_service.py  test_chat_agent.py  test_user_service.py
